fix(footer): width of rules on mobile

--- a/packages/gatsby-theme-carbon/src/components/Footer/Footer.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/Footer/Footer.module.scss
@@ -25,7 +25,7 @@
     @include carbon--breakpoint('sm') {
       content: '';
       background: $carbon--gray-80;
-      width: calc(100% - 2rem);
+      width: 100%;
       height: 1px;
       display: block;
       position: absolute;
